deploy/cilium-network-policies.yaml
---
apiVersion: cilium.io/v2
kind: CiliumClusterwideNetworkPolicy
metadata:
  name: waf-allow-loki
spec:
  description: "Allow WAF components to communicate with Loki"
  endpointSelector:
    matchLabels:
      app: coraza-waf
  egress:
  - toEndpoints:
    - matchLabels:
        app: loki
    toPorts:
    - ports:
      - port: "3100"
        protocol: TCP
---
apiVersion: cilium.io/v2
kind: CiliumClusterwideNetworkPolicy
metadata:
  name: waf-allow-envoy-ingress
spec:
  description: "Allow external traffic to Envoy"
  endpointSelector:
    matchLabels:
      app: envoy-proxy
  ingress:
  - fromEndpoints:
    - matchLabels:
        reserved: host
  - fromEndpoints:
    - matchLabels:
        reserved: world
---
apiVersion: cilium.io/v2
kind: CiliumClusterwideNetworkPolicy
metadata:
  name: threat-analyzer-allow-k8s-api
spec:
  description: "Allow threat analyzer to communicate with Kubernetes API server"
  endpointSelector:
    matchLabels:
      app: threat-analyzer
  egress:
  - toEntities:
    - kube-apiserver
    toPorts:
    - ports:
      - port: "6443"
        protocol: TCP
---
apiVersion: cilium.io/v2
kind: CiliumClusterwideNetworkPolicy
metadata:
  name: threat-analyzer-allow-cilium-operator
spec:
  description: "Allow threat analyzer to communicate with Cilium operator"
  endpointSelector:
    matchLabels:
      app: threat-analyzer
  egress:
  - toEndpoints:
    - matchLabels:
        k8s:app: cilium-operator
    toPorts:
    - ports:
      - port: "9963"
        protocol: TCP
---
apiVersion: cilium.io/v2
kind: CiliumClusterwideNetworkPolicy
metadata:
  name: threat-analyzer-allow-loki
spec:
  description: "Allow threat analyzer to query Loki for logs"
  endpointSelector:
    matchLabels:
      app: threat-analyzer
  egress:
  - toEndpoints:
    - matchLabels:
        app: loki
    toPorts:
    - ports:
      - port: "3100"
        protocol: TCP
---
# Default deny policy for all other traffic
apiVersion: cilium.io/v2
kind: CiliumClusterwideNetworkPolicy
metadata:
  name: default-deny-all
spec:
  description: "Default deny policy for all traffic not explicitly allowed"
  endpointSelector:
    {}
  ingress:
  - {}
  egress:
  - {}
